@@ -67,7 +67,11 @@ ADDITIONAL_OBJCFLAGS = -Wall
 ADDITIONAL_LDFLAGS += -L$(LIB_FREETYPE_LIBS)
 ADDITIONAL_LDFLAGS += $(XPDF_OBJ_FILES) -lfreetype -lm
 
-# Use C++ to link library (this won't work if g++ is not the obj-c compiler!)
+ifeq ($(findstring openbsd, $(GNUSTEP_TARGET_OS)), openbsd)
+ADDITIONAL_LDFLAGS += -Wl,-rpath=$(LIB_FREETYPE_LIBS)
+endif
+
+# Use C++ to link library
 LD=@CXX@
 
 -include GNUmakefile.preamble
